# zigpp

./: CMakeLists.txt  CMakeUserPresets.json  README.md  build.sh  clean.sh
cmake/: zig-ar  zig-c++  zig-cc  zig-ranlib  zig-toolchain.cmake
cmake/Modules/: FindZig.cmake
